Removed a few deprecated methods (e.g. finalize) so that the FFX build does not produce any warnings